--- a/css/main.css
+++ b/css/main.css
@@ -97,35 +97,32 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-   img {
-     max-width: 100%;
-     height: auto;
-   }
-
    .opaque {
      opacity: .6;
      filter: alpha(opacity=60); /* For IE8 and earlier */
    }
 
-   .centerImage {
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
+   .center {
+     margin: auto;
+     width: 960px;
+     max-width: 100%;
    }
 
+   .imgTopLeft {
+     position: absolute;
+     top: 8px;
+     left: 16px;
+   }
 
+   .container {
+     position: relative;
+   }
 
-
-
-
-
-
-
-
-
-
-
-
+   .imgScale {
+     display: block;
+     max-width: 100%;
+     height: auto;
+   }
 
 
 /* ==========================================================================
