--- a/css/main.css
+++ b/css/main.css
@@ -118,58 +118,43 @@ textarea {
      position: relative;
    }
 
+   .docHold {
+     width: 100%;
+     position: relative;
+   }
+
+   .docFrame {
+     display: block;
+     position: fixed;
+   }
+
    .imgScale {
      display: block;
      max-width: 100%;
      height: auto;
    }
 
-   .fullWidth {
-     height: 100%
-     display: block;
-     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-     overflow-x: hidden;
-     overflow-y: hidden;
-
+   .menuBar {
+     position: fixed;
+     top: 0;
+     width: 100%;
+     background-color: #2C313F;
    }
 
-   /* The sidebar menu */
-.sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  max-width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #2C313F;
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
+   .menuBar a {
+     float: left;
+     display: block;
+     color: #8B1F41;
+     text-align: center;
+     padding: 14px 16px;
+   }
 
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #8B1F41;
-  display: block;
-}
+   .menuBar a:hover {
+     color: #E87722;
+   }
 
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #E87722;
-}
-
-/* Style page content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+iframe {
+  border: 0;
 }
 
 
