--- a/css/main.css
+++ b/css/main.css
@@ -122,12 +122,14 @@ textarea {
      width: 100%;
      position: relative;
      padding-top: 65px;
+     padding-bottom: 100%;
+     height: 0;
    }
 
-   .docFrame {
-     display: block;
-     position: fixed;
-     max-width: 100%
+   .docHold iframe {
+     position: absolute;
+     height: 100%;
+     width: 100%;
    }
 
    .imgScale {
