--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,21 @@ textarea {
      border: 0;
    }
 
+   .survey {
+     position: relative;
+     padding-bottom: 75%;
+     height: 0;
+     overflow: hidden;
+   }
+
+   .survey iframe {
+     position: absolute;
+     top:0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+   }
+
 
 /* ==========================================================================
    Helper classes
