--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ textarea {
 
    .survey {
      position: relative;
-     padding-bottom: 100%;
+     padding-bottom: 100vh;
      height: 0;
      overflow: hidden;
    }
